--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "iban_validator",
+  "name": "iban-validator", 
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A lightweight, comprehensive TypeScript library for validating International Bank Account Numbers (IBANs) with detailed error reporting.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepublishOnly": "npm run test && npm run build"
   },
   "keywords": ["iban", "IBAN", "validation", "bank account", "typescript"],
   "author": "Tim Duckett",
   "license": "MIT",
-  "description": "A lightweight, comprehensive TypeScript library for validating International Bank Account Numbers (IBANs) with detailed error reporting.",
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.5",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "jest": "^29.7.0",
-    "prettier": "^3.5.2",
-    "ts-jest": "^29.2.6",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/timdotd/iban-validator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/timdotd/iban-validator/issues"
+  },
+  "homepage": "https://github.com/timdotd/iban-validator#readme"
 }
